# django-shop

backend/: mypy.ini  pyproject.toml  ty.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/main/: models.py
backend/main/migrations/: 0001_initial.py
