[project]
name = "django_backend"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "pip>=25.3",                    # Package installer
    "django>=5.2.8",                # Django web framework
    "psycopg2-binary>=2.9.11",      # PostgreSQL database adapter
    "pydantic[email]>=2.12.4",      # Pydantic
    "pydantic-extra-types>=2.10.6", # Pydantic: Extra types
    "pillow>=12.0.0",               # Image processing
    "python-dotenv>=1.2.1",         # Environment variables
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",                    # Type checking: MyPy
    "ty>=0.0.1a27",                    # Type checking: Ty
    "pytest>=9.0.1",                   # Pytest
    "pytest-asyncio>=1.3.0",           # Pytest: Asyncio support
    "pytest-env>=1.2.0",               # Pytest: Environment variables
    "pytest-cov>=7.0.0",               # Pytest: Coverage
    "types-html5lib>=1.1.11.20251117", # MyPy plugins: HTML5lib
    "types-requests>=2.32.4.20250913", # MyPy plugins: Requests
    "types-aiofiles>=25.1.0.20251011", # MyPy plugins: Aiofiles
    "django-stubs>=5.2.7",             # MyPy plugins: Django                   # MyPy plugins: Types-all
]

lint = [
    "pre-commit>=4.5.0", # Pre-commit hooks
]
server = [
    "granian>=2.6.0",   # Granian: ASGI server
    "gunicorn>=23.0.0", # Gunicorn: WSGI server
    "uvicorn>=0.38.0",  # Uvicorn: ASGI server
]
